--- a/static-html/scss/setup/_colours.scss
+++ b/static-html/scss/setup/_colours.scss
@@ -1,4 +1,11 @@
 //Colours should always only appear in this colours.scss
-
-$white: #fff;
 $black: #000;
+$black--20: rgba (0,0,0,.2);
+$charcoal: #585858;
+$heather: #969696;
+$ocean: #0177c1;
+$orange: #f7941d;
+$sky: #04b4c3;
+$sunshine: #ffca08;
+$white: #fff;
+$white--20: rgba (255,255,255,.2);
