28084 style base global elements

--- a/static-html/scss/setup/_colours.scss
+++ b/static-html/scss/setup/_colours.scss
@@ -1,11 +1,13 @@
 //Colours should always only appear in this colours.scss
 $black: #000;
-$black--20: rgba (0,0,0,.2);
+$black--20: rgba(0,0,0,.2);
+$black--40: rgba(0,0,0,.4);
 $charcoal: #585858;
+$charcoal--light: #a4a4a4;
 $heather: #969696;
 $ocean: #0177c1;
 $orange: #f7941d;
 $sky: #04b4c3;
 $sunshine: #ffca08;
 $white: #fff;
-$white--20: rgba (255,255,255,.2);
+$white--20: rgba(255,255,255,.2);
