--- a/static-html/scss/_global.scss
+++ b/static-html/scss/_global.scss
@@ -5,21 +5,69 @@
 }
 body {
     min-width: 320px;
-    font: normal #{$fontSize-small}/#{$lineHeight-base} $font-base;
+    font-family: $font-base;
+    font-size: $fontSize-base;
+    font-weight: $fontWeight-light;
+    line-height: $lineHeight-base;
     color: $black;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: none;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-
-    @media #{$large-up} {
-        font-size: $fontSize-base;
-    }
 }
 a {
-    color: $black;
+    color: $ocean;
     text-decoration: none;
     &:hover {
         text-decoration: underline;
     }
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
+p {
+    margin: 0 0 1.421rem;
+}
+h1 {
+    margin: 0 0 27px;
+    font-size: $fontSize-largest;
+    font-weight: $fontWeight-extraLight;
+    line-height: $lineHeight-stightest;
+}
+h2 {
+    margin: 1.25em 0 .75em 0;
+    font-size: $fontSize-larger;
+    font-weight: $fontWeight-bold;
+    line-height: $lineHeight-tightest;
+}
+h3 {
+    margin: 0 0 .75em;
+    font-size: $fontSize-large;
+    font-weight: $fontWeight-bold;
+    line-height: $lineHeight-tighter;
+}
+.intro {
+    margin: 1.2em 0;
+    font-size: $fontSize-larger;
+    line-height: $lineHeight-tightest;
+    color: $sky;
+}
+blockquote {
+    margin: 1em 0;
+    padding-left: 20px;
+    font-size: $fontSize-larger;
+    line-height: $lineHeight-tight;
+    border: 1px solid $sky;
+    border-width: 0 0 0 26px;
+}
+ul,
+ol {
+    margin: 0 0 1em 3em;
+    padding: 0;
+}
+.caption {
+    font-style: italic;
+    font-size: $fontSize-small;
+    color: $charcoal;
 }
