--- a/static-html/scss/partials/_forms.scss
+++ b/static-html/scss/partials/_forms.scss
@@ -4,6 +4,12 @@ input[type="password"],
 textarea {
     width: 100%;
     padding: 10px;
+    font-style: italic;
+    border: 2px solid $charcoal--light;
+    &:focus {
+        outline-color: $sky;
+        border-color: $sky;
+    }
 }
 textarea {
     resize: vertical;
@@ -13,8 +19,120 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"],
 .btn {
+    display: inline-block;
+    margin: 12px 0;
+    padding: 8px;
+    text-align: center;
     text-decoration: none;
-    transition: all .3s ease-in-out;
+    text-transform: uppercase;
+    border: 1px solid $black;
+    color: $black;
+    transition: background-color .2s ease-out, border-color .2s ease-out;
     -webkit-appearance: none;
     appearance: none;
+    &:hover,
+    &:active {
+        text-decoration: none;
+        border-color: $black--20;
+        background-color: $black--20;
+        transition: background-color .3s ease-in, border-color .3s ease-in;
+        cursor: pointer;
+    }
+}
+.btn--white {
+    border-color: $white;
+    color: $white;
+    &:hover,
+    &:active {
+        border-color: $white--20;
+        background-color: $white--20;
+    }
+}
+.btn--fullWidth {
+    width: 100%;
+}
+
+/*  Global Select styling */
+.selectboxit-container {
+    * {
+        font-family: $font-base;
+        font-size: $fontSize-base;
+        font-weight: $fontWeight-light;
+    }
+    .selectboxit-btn {
+        border: 2px solid $charcoal--light;
+        background: none;
+        &.selectboxit-enabled:hover,
+        &.selectboxit-enabled:focus {
+            color: $black;
+            background: none;
+        }
+    }
+    .selectboxit-text {
+        font-style: italic;
+    }
+    .selectboxit {
+        height: 41px;
+        line-height: 41px;
+        border-radius: 0;
+    }
+    .selectboxit span,
+    & > span {
+        height: 37px;
+        line-height: 37px;
+    }
+    .selectboxit-options a {
+        height: auto;
+        line-height: normal;
+    }
+    .selectboxit-option {
+        position: relative;
+        padding: 8px 7px;
+        transition: all .2s ease-out;
+        &:after {
+            content: '';
+            position: absolute;
+            height: 1px;
+            left: 25px;
+            right: 25px;
+            bottom: 0;
+            background: #f2f2f2;
+            transition: all .2s ease-out;
+        }
+        &.selectboxit-focus {
+            background: $ocean;
+            a {
+                color: $white;
+            }
+            &:after {
+                background: $ocean;
+            }
+        }
+    }
+    .selectboxit-list {
+        border-radius: 0;
+        border: none;
+        box-shadow: 1px 1px 5px $black--40;
+        .selectboxit-option-anchor {
+            display: inline;
+            color: $ocean;
+            white-space: normal;
+        }
+        .selectboxit-focus {
+            .selectboxit-option-anchor {
+                background: none;
+            }
+        }
+    }
+    .selectboxit-option-first,
+    .selectboxit-option-last {
+        border-radius: 0;
+    }
+    .selectboxit-option-last {
+        .selectboxit-option-anchor {
+            &:after {
+                display: none;
+            }
+        }
+    }
 }
