--- a/wp-content/themes/w4ptheme/scss/_settings.scss
+++ b/wp-content/themes/w4ptheme/scss/_settings.scss
@@ -80,12 +80,12 @@ $print-transparent-backgrounds: true;
 
 $breakpoints: (
   small: 0,
-  medium: 640px,
+  medium: 768px,
   large: 1024px,
-  xlarge: 1200px,
+  xlarge: 1280px,
   xxlarge: 1440px,
 );
-$breakpoint-classes: (small medium large);
+$breakpoint-classes: (small medium large xlarge);
 
 // 3. The Grid
 // -----------
