--- a/static-html/scss/setup/_utilities.scss
+++ b/static-html/scss/setup/_utilities.scss
@@ -23,6 +23,15 @@
 .u-float-right {
     float: right;
 }
+.u-text--center {
+    text-align: center;
+}
+.u-text--left {
+    text-align: left;
+}
+.u-text--right {
+    text-align: right;
+}
 .u-verticalAlign--center {
     position: relative;
     top: 50%;
