--- a/static-html/scss/_found-app.scss
+++ b/static-html/scss/_found-app.scss
@@ -4,7 +4,7 @@
 @import 'foundation';
 //@import 'motion-ui';
 
-//@include foundation-global-styles;
+@include foundation-global-styles;
 @include foundation-grid;
 //// @include foundation-flex-grid;
 //@include foundation-typography;
@@ -26,7 +26,7 @@
 //@include foundation-flex-video;
 //@include foundation-label;
 //@include foundation-media-object;
-//@include foundation-off-canvas;
+@include foundation-off-canvas;
 //@include foundation-orbit;
 //@include foundation-pagination;
 //@include foundation-progress-bar;
@@ -42,7 +42,7 @@
 //@include foundation-title-bar;
 //@include foundation-tooltip;
 //@include foundation-top-bar;
-//@include foundation-visibility-classes;
+@include foundation-visibility-classes;
 //@include foundation-float-classes;
 // @include foundation-flex-classes;
 
