28220 style mobile nav toggler and header for mobile bp

--- a/static-html/scss/application.scss
+++ b/static-html/scss/application.scss
@@ -8,5 +8,6 @@
 
 @import 'partials/footer';
 @import 'partials/header';
+@import 'partials/mobile-nav-toggle';
 @import 'partials/site-navigation';
 @import 'partials/social-list';
