28220 style mobile navigation

--- a/static-html/scss/partials/_header.scss
+++ b/static-html/scss/partials/_header.scss
@@ -1,5 +1,5 @@
 /*TODO: Temporary style */
-.off-canvas-wrapper {
+.off-canvas-wrapper-inner {
     height: 700px;
 }
 /*TODO: End Temporary style */
