--- a/static-html/scss/application.scss
+++ b/static-html/scss/application.scss
@@ -9,5 +9,6 @@
 @import 'partials/footer';
 @import 'partials/header';
 @import 'partials/mobile-nav-toggle';
+@import 'partials/off-canvas';
 @import 'partials/site-navigation';
 @import 'partials/social-list';
