--- a/static-html/scss/partials/_site-navigation.scss
+++ b/static-html/scss/partials/_site-navigation.scss
@@ -64,3 +64,61 @@
         }
     }
 }
+.siteNavigation--mobile {
+    a {
+        position: relative;
+        &:hover {
+            border-color: $sky--dark;
+        }
+    }
+    & > li {
+        margin-left: 0;
+        &> a {
+            padding: 15px 0 15px 26px;
+            border-bottom: 1px solid $sky--dark;
+        }
+    }
+    ul {
+        display: none;
+        padding: 15px 0;
+        background: $sky--dark;
+        a {
+            padding: 4px 0 4px 55px;
+        }
+    }
+    .siteNavigation-subNavToggle {
+        display: none;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 40px;
+        height: 100%;
+        border-top: 1px solid $sky;
+        background: $sky--dark;
+        &:before {
+            content: "";
+            display: block;
+            position: relative;
+            top: 50%;
+            width: 5px;
+            height: 5px;
+            margin: -3px auto 0;
+            border-right: 1px solid $white;
+            border-bottom: 1px solid $white;
+            transform: rotate(45deg);
+        }
+    }
+    .has-subNav {
+        .siteNavigation-subNavToggle {
+            display: block;
+        }
+        & > a {
+            padding-right: 50px;
+        }
+    }
+    .is-open {
+        & > a {
+            border-bottom-color: $sky;
+        }
+    }
+}
