--- a/static-html/scss/partials/_site-navigation.scss
+++ b/static-html/scss/partials/_site-navigation.scss
@@ -53,7 +53,7 @@
         visibility: hidden;
         position: absolute;
         left: 0;
-        right: 0;
+        min-width: 100%;
         background: $sky--dark;
         a {
             padding: 5px 15px;
