--- a/static-html/scss/partials/_header.scss
+++ b/static-html/scss/partials/_header.scss
@@ -4,9 +4,10 @@
 }
 /*TODO: End Temporary style */
 .siteHeader {
-    background: $sky;
+    background-color: $sky;
 }
 .siteHeader-top {
+    position: relative;
     padding: 20px 0;
     @include breakpoint(large down) {
         display: table;
@@ -21,6 +22,16 @@
             }
         }
     }
+    &:before {
+        content: "";
+        position: absolute;
+        top: -160px;
+        left: -90px;
+        width: 760px;
+        height: 760px;
+        background: url("../images/header-background-image.svg") 0 0 no-repeat;
+        opacity: .1;
+    }
 }
 .siteHeader-social,
 .siteHeader-topNav {
@@ -29,8 +40,8 @@
     vertical-align: middle;
 }
 .siteHeader-topNav {
-    margin-right: 4px;
-    @include breakpoint(large) {
-        margin-right: 0;
-    }
+    margin-right: 5px;
+    //@include breakpoint(large) {
+    //    margin-right: 0;
+    //}
 }
