--- a/wp-content/themes/w4ptheme/scss/_settings.scss
+++ b/wp-content/themes/w4ptheme/scss/_settings.scss
@@ -46,7 +46,7 @@
 // ---------
 
 $global-font-size: 100%;
-$global-width: rem-calc(1200);
+$global-width: rem-calc(960);
 $global-lineheight: 1.5;
 $foundation-palette: (
   primary: #2199e8,
@@ -80,9 +80,9 @@ $print-transparent-backgrounds: true;
 
 $breakpoints: (
   small: 0,
-  medium: 768px,
-  large: 1024px,
-  xlarge: 1280px,
+  medium: 767px,
+  large: 1023px,
+  xlarge: 1279px,
   xxlarge: 1440px,
 );
 $breakpoint-classes: (small medium large xlarge);
@@ -397,7 +397,7 @@ $meter-fill-bad: $alert-color;
 // --------------
 
 $offcanvas-size: 250px;
-$offcanvas-background: $light-gray;
+$offcanvas-background: $sky;
 $offcanvas-zindex: -1;
 $offcanvas-transition-length: 0.5s;
 $offcanvas-transition-timing: ease;
