--- a/wp-content/themes/w4ptheme/scss/application.scss
+++ b/wp-content/themes/w4ptheme/scss/application.scss
@@ -8,3 +8,7 @@
 
 @import 'partials/footer';
 @import 'partials/header';
+@import 'partials/mobile-nav-toggle';
+@import 'partials/off-canvas';
+@import 'partials/site-navigation';
+@import 'partials/social-list';
