--- a/wp-content/themes/w4ptheme/scss/setup/_colours.scss
+++ b/wp-content/themes/w4ptheme/scss/setup/_colours.scss
@@ -8,6 +8,8 @@ $heather: #969696;
 $ocean: #0177c1;
 $orange: #f7941d;
 $sky: #04b4c3;
+$sky--dark: #16a2af;
+$sky--darker: #1393a0;
 $sunshine: #ffca08;
 $white: #fff;
 $white--20: rgba(255,255,255,.2);
