--- a/static-html/dev-html/partials/off-canvas.html
+++ b/static-html/dev-html/partials/off-canvas.html
@@ -53,26 +53,26 @@
     </ul>
 </nav>
 <div class="offCanvas-social">
-    <ul class="socialList u-list--plain u-list--inline">
+    <ul class="socialList u-list--plain u-list--inline test5">
         <li>
             <a href="#" target="_blank" title="Follow us on Twitter">
                 <svg class='svgIcon'>
-                    <use xlink:href='#twitter'/>
-                </svg>
+                <use xlink:href='#twitter'/>
+            </svg>
             </a>
         </li>
         <li>
             <a href="#" target="_blank" title="Follow us on Facebook">
                 <svg class='svgIcon'>
-                    <use xlink:href='#facebook'/>
-                </svg>
+                <use xlink:href='#facebook'/>
+            </svg>
             </a>
         </li>
         <li>
             <a href="#" target="_blank" title="Follow us on Youtube">
                 <svg class='svgIcon'>
-                    <use xlink:href='#youtube'/>
-                </svg>
+                <use xlink:href='#youtube'/>
+            </svg>
             </a>
         </li>
     </ul>
