28281 style top row in footer

--- a/static-html/dev-html/partials/header.html
+++ b/static-html/dev-html/partials/header.html
@@ -11,7 +11,7 @@
         </div>
         <div class="small-3 medium-9 column u-text--right">
             <div class="show-for-medium siteHeader-social">
-                <ul class="socialList u-list--plain u-list--inline test5">
+                <ul class="socialList u-list--plain u-list--inline">
                     <li>
                         <a href="#" target="_blank" title="Follow us on Twitter">
                             <svg class='svgIcon'>
@@ -34,6 +34,7 @@
                         </a>
                     </li>
                 </ul>
+
             </div>
             <nav class="show-for-medium siteHeader-topNav">
                 <ul class="siteNavigation u-list--plain u-list--inline">
