--- a/static-html/dev-html/partials/off-canvas.html
+++ b/static-html/dev-html/partials/off-canvas.html
@@ -53,7 +53,7 @@
     </ul>
 </nav>
 <div class="offCanvas-social">
-    <ul class="socialList u-list--plain u-list--inline test5">
+    <ul class="socialList u-list--plain u-list--inline">
         <li>
             <a href="#" target="_blank" title="Follow us on Twitter">
                 <svg class='svgIcon'>
@@ -76,4 +76,5 @@
             </a>
         </li>
     </ul>
+
 </div>
