--- a/static-html/dev-html/partials/footer.html
+++ b/static-html/dev-html/partials/footer.html
@@ -1,16 +1,14 @@
 <footer class="siteFooter">
-    <div class="row">
-        <div class="large-3 column">
-            <div class="siteFooter-logo">
-                <a href="#" title="Creative Pinellas">
-                    <svg class='svgIcon svgIcon--logo'>
-                        <use xlink:href='#logoFull'/>
-                    </svg>
-                </a>
-            </div>
+    <div class="row small-collapse">
+        <div class="large-3 column siteFooter-logo">
+            <a href="#" title="Creative Pinellas">
+                <svg class='svgIcon svgIcon--logo'>
+                    <use xlink:href='#logoFull'/>
+                </svg>
+            </a>
         </div>
-        <div class="medium-10 large-7 column">
-            <nav class="">
+        <div class="medium-10 large-7 column siteFooter-nav">
+            <nav>
                 <ul class="siteNavigation siteNavigation--footer u-list--plain u-list--inline">
                     <li>
                         <a href="#">For the arts community</a>
@@ -33,8 +31,11 @@
                 </ul>
             </nav>
         </div>
-        <div class="medium-2 column">
-            <ul class="socialList u-list--plain u-list--inline test5">
+        <div class="medium-2 column siteFooter-social">
+            <div class="siteFooter-blockTitle">
+                Socialize
+            </div>
+            <ul class="socialList u-list--plain u-list--inline">
                 <li>
                     <a href="#" target="_blank" title="Follow us on Twitter">
                         <svg class='svgIcon'>
@@ -57,6 +58,7 @@
                     </a>
                 </li>
             </ul>
+
         </div>
     </div>
 </footer>
