--- a/wp-content/themes/w4ptheme/scss/_settings.scss
+++ b/wp-content/themes/w4ptheme/scss/_settings.scss
@@ -58,8 +58,8 @@ $foundation-palette: (
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
-$black: #0a0a0a;
-$white: #fefefe;
+//$black: #0a0a0a;
+//$white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
