--- a/static-html/scss/setup/_type.scss
+++ b/static-html/scss/setup/_type.scss
@@ -2,6 +2,7 @@
 $font-base: 'pragmatica-web', 'Helvetica Neue', Helvetica, Arial;
 
 //FONT SIZES
+$fontSize-xsmall: .6rem;
 $fontSize-small: .8rem;
 $fontSize-base: 1rem;
 $fontSize-large: 1.2rem;
