28284 page template structure

--- a/static-html/scss/_global.scss
+++ b/static-html/scss/_global.scss
@@ -74,6 +74,9 @@ ol {
     font-size: $fontSize-small;
     color: $charcoal;
 }
+#svgPlaceholder {
+    display: none;
+}
 .svgIcon {
     fill: currentColor;
 }
