--- a/wp-content/themes/w4ptheme/scss/_global.scss
+++ b/wp-content/themes/w4ptheme/scss/_global.scss
@@ -74,6 +74,9 @@ ol {
     font-size: $fontSize-small;
     color: $charcoal;
 }
+#svgPlaceholder {
+    display: none;
+}
 .svgIcon {
     fill: currentColor;
 }
