--- a/static-html/scss/application.scss
+++ b/static-html/scss/application.scss
@@ -12,4 +12,5 @@
 @import 'partials/mobile-nav-toggle';
 @import 'partials/off-canvas';
 @import 'partials/site-navigation';
+@import 'partials/site-sitebar';
 @import 'partials/social-list';
