--- a/wp-content/themes/w4ptheme/scss/partials/_layout.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_layout.scss
@@ -9,11 +9,26 @@
 .off-canvas {
     height: 100%;
 }
-.siteContent,
+.siteContent {
+    padding: 50px 10px 50px;
+    @include breakpoint(medium) {
+        padding: 100px 15px 90px;
+    }
+}
 .siteSidebar {
-    padding-top: 100px;
-    padding-bottom: 90px;
+    padding: 0 10px 90px;
+    @include breakpoint(medium) {
+        padding-top: 100px;
+        padding-left: 0;
+        padding-right: 15px;
+    }
+
 }
 .siteContent--hasSidebar {
-    padding-right: 10%;
+    @include breakpoint(medium) {
+        padding-right: 8%;
+    }
+    @include breakpoint(large) {
+        padding-right: 10%;
+    }
 }
