28332 add blog page content

--- a/static-html/dev-html/partials/testpage-template.html
+++ b/static-html/dev-html/partials/testpage-template.html
@@ -2,15 +2,17 @@
     <section class="column siteContent">
         <h1>H1 Pragmatica Web Extra Light (200)&nbsp; 2.625em /1.15em&nbsp;<br></h1>
 
-        <p class="post-info">Month 23, 2016 by AUTHOR NAME | <a>CATEGORY</a></p>
 
-        <p class="intro">Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.&nbsp;Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.</p>
+
+        <div class="intro">
+            <p>Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.&nbsp;Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.</p>
+        </div>
 
         <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font.
             P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web.
             All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. </p>
 
-        <blockquote class="pullquote">This is the .blockquote style. The border to the left is 26px and the padding between the words and the quote is 20px. Font size/line-height is 1.5em/1.4em.</blockquote>
+        <blockquote>This is the .blockquote style. The border to the left is 26px and the padding between the words and the quote is 20px. Font size/line-height is 1.5em/1.4em.</blockquote>
 
         <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font.
             P size is 1em/1.6em, Pragmatica Light, 300 weight. <br></p>
