--- a/static-html/scss/application.scss
+++ b/static-html/scss/application.scss
@@ -11,6 +11,7 @@
 @import 'partials/layout';
 @import 'partials/mobile-nav-toggle';
 @import 'partials/off-canvas';
+@import 'partials/post-page-navigation';
 @import 'partials/site-navigation';
 @import 'partials/site-sitebar';
 @import 'partials/social-list';
