28332 fix templates according to blog page

--- a/static-html/dev-html/partials/blog-post-template.html
+++ b/static-html/dev-html/partials/blog-post-template.html
@@ -39,6 +39,7 @@
                     <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. &nbsp;Web sites are transforming from boring fields of Arial to embrace the gamut
                         of typographical possibilities offered by web fonts. Web fonts, combined with the style and layout options presented by the creative use of CSS and JavaScript offer a new world of typographic opportunity on the web. </p>
                 </div>
+                <!--    Post Content    -->
             </article>
 
         </section>
