--- a/static-html/scss/partials/_header.scss
+++ b/static-html/scss/partials/_header.scss
@@ -5,7 +5,6 @@
 /*TODO: End Temporary style */
 .siteHeader {
     background-color: $sky;
-    overflow: hidden;
 }
 .siteHeader-top {
     position: relative;
@@ -25,12 +24,14 @@
     }
     &:before {
         content: "";
+        display: block; // redefine row:before display:table
         position: absolute;
-        top: -160px;
+        top: 0;
         left: -90px;
+        bottom: 0;
         width: 760px;
-        height: 760px;
-        background: url("../images/header-background-image.svg") 0 0 no-repeat;
+        background: url("../images/header-background-image.svg") 0 -160px no-repeat;
+        background-size: 100% 760px;
         opacity: .1;
     }
     & > .column {
