--- a/static-html/dev-html/partials/blog-post-template.html
+++ b/static-html/dev-html/partials/blog-post-template.html
@@ -11,6 +11,8 @@
 
                 <!--    Post Content    -->
                 <div class="postPage-content">
+
+                    <!-- for image I'm using standard WP Add media structure  -->
                     <figure class="wp-caption alignnone">
                         <img class="size-full wp-image-13" src="http://placehold.it/650x300" alt="" width="650" height="300">
                         <figcaption class="wp-caption-text">This is a caption. Caption color is Charcoal, #585858, 0.875em/ Pragmatica Web 300. This is a caption. Caption color is Charcoal, #585858, 0.875em/ Pragmatica Web 300. This is a caption. Caption color is Charcoal, #585858, 0.875em/
