28332 add related post list

--- a/static-html/scss/_settings.scss
+++ b/static-html/scss/_settings.scss
@@ -80,6 +80,7 @@ $print-transparent-backgrounds: true;
 
 $breakpoints: (
   small: 0,
+  halfMedium: 480px,
   medium: 767px,
   large: 1023px,
   xlarge: 1279px,
