--- a/static-html/scss/partials/_post-page-navigation.scss
+++ b/static-html/scss/partials/_post-page-navigation.scss
@@ -1,6 +1,6 @@
 .postPageNavigation {
     padding: 13px 0;
-    border-top: 1px solid $gary-border;
+    border-top: 1px solid $gray-border;
 }
 .postNavigation-prev {
     float: left;
