--- a/static-html/scss/partials/_post-page-navigation.scss
+++ b/static-html/scss/partials/_post-page-navigation.scss
@@ -2,6 +2,14 @@
     padding: 13px 0;
     border-top: 1px solid $gray-border;
 }
+.postNavigation-prev,
+.postNavigation-next {
+    display: inline-block;
+    max-width: 45%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
 .postNavigation-prev {
     float: left;
 }
