28358 fix main menu sub nav hover color

--- a/static-html/scss/partials/_site-navigation.scss
+++ b/static-html/scss/partials/_site-navigation.scss
@@ -39,7 +39,7 @@
         &.has-subNav:hover,
         &.has-subNav.is-open {
             background: $sky--dark;
-            a {
+            & > a {
                 background: $sky--dark;
             }
             ul {
