--- a/wp-content/themes/w4ptheme/scss/partials/_site-navigation.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_site-navigation.scss
@@ -39,7 +39,7 @@
         &.has-subNav:hover,
         &.has-subNav.is-open {
             background: $sky--dark;
-            a {
+            & > a {
                 background: $sky--dark;
             }
             ul {
