28364 set bg color for main wrapper

--- a/static-html/scss/partials/_layout.scss
+++ b/static-html/scss/partials/_layout.scss
@@ -1,6 +1,7 @@
 .off-canvas-wrapper,
 .off-canvas-wrapper-inner {
     height: 100%;
+    background-color: $sky;
 }
 .off-canvas-content {
     width: 100%;
