--- a/wp-content/themes/w4ptheme/scss/partials/_layout.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_layout.scss
@@ -1,6 +1,7 @@
 .off-canvas-wrapper,
 .off-canvas-wrapper-inner {
     height: 100%;
+    background-color: $sky;
 }
 .off-canvas-content {
     width: 100%;
