--- a/static-html/dev-html/partials/header.html
+++ b/static-html/dev-html/partials/header.html
@@ -82,9 +82,9 @@
                     </li>
                 </ul>
             </nav>
-            <button type="button" class="hide-for-large mobileNavToggle js-mobileNavToggle" data-toggle="offCanvas" data-open="CLOSE" data-close="MENU">
+            <a href="#" class="hide-for-large mobileNavToggle js-mobileNavToggle" data-toggle="offCanvas" data-open="CLOSE" data-close="MENU">
                 <span class="mobileNavToggle-hamburger"><span></span></span>
-            </button>
+            </a>
         </div>
     </section>
 </header>
