--- a/wp-content/themes/w4ptheme/scss/_global.scss
+++ b/wp-content/themes/w4ptheme/scss/_global.scss
@@ -69,6 +69,9 @@ ol {
     margin: 0 0 1em 3em;
     padding: 0;
 }
+.siteBody {
+    overflow-x: hidden;
+}
 .caption,
 .wp-caption .wp-caption-text,
 .gallery-caption {
