--- a/wp-content/themes/w4ptheme/scss/application.scss
+++ b/wp-content/themes/w4ptheme/scss/application.scss
@@ -13,6 +13,8 @@
 @import 'partials/off-canvas';
 @import 'partials/post-list';
 @import 'partials/post-page-navigation';
+@import 'partials/promo-list';
+@import 'partials/promo-space';
 @import 'partials/site-navigation';
 @import 'partials/site-sitebar';
 @import 'partials/social-list';
