--- a/wp-content/themes/w4ptheme/scss/setup/_utilities.scss
+++ b/wp-content/themes/w4ptheme/scss/setup/_utilities.scss
@@ -90,3 +90,16 @@
     text-align: left;
     vertical-align: top;
 }
+.u-fullSection {
+    margin: 0 -10000px;
+    padding: 0 10000px;
+}
+
+//Gradient utilities
+.u-aquaGradient {
+    background: #52a0d1;
+    background: -moz-linear-gradient(left,  #52a0d1 0%, #0777bd 100%);
+    background: -webkit-linear-gradient(left,  #52a0d1 0%,#0777bd 100%);
+    background: linear-gradient(to right,  #52a0d1 0%,#0777bd 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#52a0d1", endColorstr="#0777bd", GradientType=1 );
+}
