--- a/static-html/dev-html/partials/blog-post-template.html
+++ b/static-html/dev-html/partials/blog-post-template.html
@@ -70,7 +70,7 @@
                         <p><i>BY AUTHOR NAME | <a href="#">CATEGORY</a></i></p>
                     </div>
                     <div>
-                        <a href="#" class="btn btn--fullWidth">Read More</a>
+                        <a href="#" class="btn btn--fullWidth">Read Article</a>
                     </div>
                 </div>
                 <!--   / postsList-item  -->
@@ -87,7 +87,7 @@
                         <div class="postsList-item-info">BY AUTHOR NAME | <a href="#">CATEGORY</a></div>
                     </div>
                     <div>
-                        <a href="#" class="btn btn--fullWidth">Read More</a>
+                        <a href="#" class="btn btn--fullWidth">Read Article</a>
                     </div>
                 </div>
                 <!--   / postsList-item  -->
