--- a/static-html/scss/application.scss
+++ b/static-html/scss/application.scss
@@ -7,6 +7,7 @@
 @import 'partials/forms';
 
 @import 'partials/footer';
+@import 'partials/grid-item';
 @import 'partials/header';
 @import 'partials/layout';
 @import 'partials/mobile-nav-toggle';
