--- a/wp-content/themes/w4ptheme/scss/_settings.scss
+++ b/wp-content/themes/w4ptheme/scss/_settings.scss
@@ -86,7 +86,7 @@ $breakpoints: (
   xlarge: 1279px,
   xxlarge: 1440px,
 );
-$breakpoint-classes: (small medium large xlarge);
+$breakpoint-classes: (small halfMedium medium large xlarge);
 
 // 3. The Grid
 // -----------
