--- a/wp-content/themes/w4ptheme/scss/setup/_utilities.scss
+++ b/wp-content/themes/w4ptheme/scss/setup/_utilities.scss
@@ -32,6 +32,9 @@
 .u-text--right {
     text-align: right;
 }
+.u-text--upper {
+    text-transform: uppercase;
+}
 .u-verticalAlign--center {
     position: relative;
     top: 50%;
