--- a/static-html/scss/partials/_post-list.scss
+++ b/static-html/scss/partials/_post-list.scss
@@ -8,6 +8,7 @@
     border-bottom: 1px solid $gray-border;
     &:last-child {
         border-bottom: none;
+        margin-bottom: 0;
     }
 }
 .postsList-item-image {
