--- a/wp-content/themes/w4ptheme/scss/partials/_post-page-navigation.scss
+++ b/wp-content/themes/w4ptheme/scss/partials/_post-page-navigation.scss
@@ -16,3 +16,39 @@
 .postNavigation-next {
     float: right;
 }
+
+.pagination {
+    position: relative;
+    text-align: center;
+    .page-numbers {
+        display: none;
+        padding: 5px;
+        @include breakpoint(medium) {
+            display: inline-block;
+        }
+        &.current {
+            display: inline-block;
+        }
+    }
+    .prev,
+    .next {
+        display: block;
+        @include breakpoint(medium) {
+            position: absolute;
+            top: 0;
+            float: none;
+        }
+    }
+    .prev {
+        float: left;
+        @include breakpoint(medium) {
+            left: 0;
+        }
+    }
+    .next {
+        float: right;
+        @include breakpoint(medium) {
+            right: 0;
+        }
+    }
+}
