--- a/static-html/scss/setup/_colours.scss
+++ b/static-html/scss/setup/_colours.scss
@@ -4,8 +4,10 @@ $black--20: rgba(0,0,0,.2);
 $black--40: rgba(0,0,0,.4);
 $charcoal: #585858;
 $charcoal--light: #a4a4a4;
+$gray: #e5e5e5;
 $heather: #969696;
 $ocean: #0177c1;
+$ocean--80: rgba(1,119,193,.8);
 $orange: #f7941d;
 $orange--75: rgba(247,148,29,.75);
 $sky: #04b4c3;
