--- a/static-html/dev-html/partials/directory-template.html
+++ b/static-html/dev-html/partials/directory-template.html
@@ -71,15 +71,15 @@
         </section>
         <section class="row">
             <div class="halfMedium-6 medium-3 medium-offset-1 column">
-                <label for="">Date Range: From</label>
+                <label for="dateFrom">Date Range: From</label>
                 <div class="form-row">
-                    <input type="text" value="all">
+                    <input type="text" id="dateFrom" placeholder="all" class="js-datepicker">
                 </div>
             </div>
             <div class="halfMedium-6 medium-3 column">
-                <label for="">To</label>
+                <label for="dateTo">To</label>
                 <div class="form-row">
-                    <input type="text" value="all">
+                    <input type="text" id="dateTo" placeholder="all" class="js-datepicker">
                 </div>
             </div>
             <div class="medium-3 column end">
